--- a/challenge2/Grep_Challenge_10623060.ipynb
+++ b/challenge2/Grep_Challenge_10623060.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,7 +52,7 @@
         },
         "outputId": "689d587c-819e-4d55-b959-61c83b66cba4"
       },
-      "execution_count": 173,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1025,7 +1024,7 @@
         },
         "outputId": "eda89da5-0b80-48a6-8f29-f6232a18b282"
       },
-      "execution_count": 174,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1093,7 +1092,7 @@
         },
         "outputId": "cf0eae7c-d48b-4695-ddcb-4b396c4b827e"
       },
-      "execution_count": 175,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1161,7 +1160,7 @@
         },
         "outputId": "9c960910-9e3e-445f-cdcf-db17e5b44e8d"
       },
-      "execution_count": 411,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1400,7 +1399,7 @@
         "    out_file.open(\"program_result.txt\");\n",
         "    if (rank == 0){\n",
         "      for(int i = 0; i < current_index; i++){\n",
-        "        out_file << all_indexes[i]+1 << \": \" << all_l[i] << \"\\n\";\n",
+        "        out_file << all_indexes[i]+1 << \":\" << all_l[i] << \"\\n\";\n",
         "      }\n",
         "    }\n",
         "    out_file.close();\n",
@@ -1412,9 +1411,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DabWL2E0Nt8q",
-        "outputId": "af1a51bf-616b-49a4-d73e-66c436187ac8"
+        "outputId": "0e3f054a-e534-4584-9e5d-02b9eef60098"
       },
-      "execution_count": 412,
+      "execution_count": 427,
       "outputs": [
         {
           "output_type": "stream",
@@ -1436,9 +1435,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lOEr2Cz0ydsW",
-        "outputId": "b825888f-07bb-40a7-e761-f4f9ebd58a0e"
+        "outputId": "928422ba-4458-4268-8d7f-841237293599"
       },
-      "execution_count": 413,
+      "execution_count": 428,
       "outputs": [
         {
           "output_type": "stream",
@@ -1462,7 +1461,7 @@
         "id": "ddp3MCmr0uOd",
         "outputId": "44a5141d-6a22-40a8-ef7f-a74ad766b2c4"
       },
-      "execution_count": 418,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1493,7 +1492,7 @@
         "id": "QI0AJFHUICJE",
         "outputId": "3aa97332-ca2f-418a-ade3-d0ce45592c55"
       },
-      "execution_count": 419,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1528,7 +1527,7 @@
         "id": "ttHZQDqWIEgl",
         "outputId": "ae9d48e4-1695-433e-da9a-7909f8f0f7ea"
       },
-      "execution_count": 420,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1567,7 +1566,7 @@
         "id": "YIz1_GNEIG9Q",
         "outputId": "b6f158ed-953a-48e6-b245-6cf0bebbd742"
       },
-      "execution_count": 421,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1610,7 +1609,7 @@
         "id": "UdJI1VITIKN7",
         "outputId": "f524fdf2-7d11-430c-8438-d68c0c7e9a93"
       },
-      "execution_count": 422,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1657,7 +1656,7 @@
         "id": "YMjBNOu6IOYf",
         "outputId": "39e7313a-b24d-4f70-c54d-a9b166d1b999"
       },
-      "execution_count": 423,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1708,7 +1707,7 @@
         "id": "izNzNFl0ISbx",
         "outputId": "1b92383e-5a80-4b0d-9965-171e00a13a4a"
       },
-      "execution_count": 424,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1763,7 +1762,7 @@
         "id": "hP-yJD3oIWSS",
         "outputId": "c841c727-bee1-4cbc-9d28-1bdf7b986323"
       },
-      "execution_count": 425,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1837,9 +1836,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6a54dfa9-44a2-44c5-fe5e-1b3fe80a1fcf"
+        "outputId": "20317999-1b91-46cb-fcd3-46a453b18bf2"
       },
-      "execution_count": 426,
+      "execution_count": 429,
       "outputs": [
         {
           "output_type": "stream",
@@ -1858,107 +1857,17 @@
             "The process 4 will reads 187 rows, that starts from index 751\n",
             "That are 15147 char!\n",
             "Process 0 starts with row 0\n",
-            "Process 2 starts with row 376\n",
-            "Process 1 starts with row 188\n",
             "Process 3 starts with row 564\n",
             "Process 4 starts with row 751\n",
+            "Process 1 starts with row 188\n",
+            "Process 2 starts with row 376\n",
             "Process 0 found 6\n",
             "Process 1 found 8\n",
             "Process 2 found 10\n",
             "Process 3 found 12\n",
             "Process 4 found 8\n",
             "Total number of lines found is 44\n",
-            "Communication took 0.036081s\n",
-            "1,44c1,44\n",
-            "< 42:truth might fracture the group leaving everything in even more of a mess than it\n",
-            "< 76:initially would have guessed that they were green, but the more he looked at\n",
-            "< 80:them and bringing out more color. They were definitely the most unusual pair of\n",
-            "< 95:There wasn't less to be given to one person if you wanted to give more to\n",
-            "< 118:that she barely listened to the answers anymore. The answers were always the\n",
-            "< 119:same. Well, not exactly the same, but the same in a general sense. A more\n",
-            "< 202:down. It bothered her more than a little bit that this could also be used as a\n",
-            "< 204:much hope and energy. They had planned the trip for more than a year and both\n",
-            "< 209:more like a week in her mind. The fact that she still was having trouble\n",
-            "< 211:she could just get a little rest the entire incident might make a little more\n",
-            "< 255:suck them down. It bothered her more than a little bit that this could also be\n",
-            "< 294:herself in a little more than she bargained for. It wasn't often that she found\n",
-            "< 300:more to her life than this and there had to be a better way to make a living.\n",
-            "< 364:grateful for the distraction.  Debbie had taken George for granted for more than\n",
-            "< 384:events that do that to you.  Ten more steps. If he could take ten more steps it\n",
-            "< 386:they wouldn't listen to his brain. Ten more steps and it would be over but it\n",
-            "< 396:first time.  He had disappointed himself more than anyone else. That wasn't to\n",
-            "< 399:was something that made him even more disappointed in himself. Yet here he was,\n",
-            "< 413:sandcastle and take more of it away. The third wave, a big one, crashed over the\n",
-            "< 441:more intently to see if there were any tan lines where a ring may have been, and\n",
-            "< 481:show you that she can. Doubt her more and she'll prove she can again. We all\n",
-            "< 486:didnt know that sheets should be washed more than once a season. He said he\n",
-            "< 526:in a little more than she bargained for. It wasn't often that she found herself\n",
-            "< 551:George for granted for more than fifteen years now. He wasn't sure what exactly\n",
-            "< 589:was. That made her all the more relieved she had made the change. The number of\n",
-            "< 600:the beauty in his life at this moment would ultimately make his life much more\n",
-            "< 609:far more impressive than how he actually liked it. It was all about image and\n",
-            "< 612:green, but the more he looked at them he almost wanted to say they were a golden\n",
-            "< 615:constantly glinting off of them and bringing out more color. They were\n",
-            "< 621:wasn't that he was super strange or difficult. It was more that there wasn't\n",
-            "< 624:who knew him had. It was even more of a shame that they'd refuse to listen even\n",
-            "< 636:publically sing that first song.  He had disappointed himself more than anyone\n",
-            "< 639:were disappointed in him was something that made him even more disappointed in\n",
-            "< 647:I'm going to hire professional help tomorrow. I can't handle this anymore. She\n",
-            "< 649:more than I ever signed up to do.  There had to be a better way. That's all\n",
-            "< 653:boss. There had to be more to her life than this and there had to be a better\n",
-            "< 791:world for the rest of the day.  She reached her goal, exhausted. Even more\n",
-            "< 819:their pregnancy weight more quickly and easily. The benefits of breastfeeding\n",
-            "< 837:her more than a little bit that this could also be used as a metaphor for her\n",
-            "< 859:Hundreds of thousands? \"Not enough,\" the said under his breath. I need more.\n",
-            "< 862:the movement, trying to decipher exactly what she had spied. The more she\n",
-            "< 863:peered, however, the more she thought it might be a figment of her imagination.\n",
-            "< 897:smart. The fact that he was more intelligent than anyone else in the room could\n",
-            "< 910:and asking them to try and get their kids under a bit more control, but before\n",
-            "---\n",
-            "> 42: truth might fracture the group leaving everything in even more of a mess than it\n",
-            "> 76: initially would have guessed that they were green, but the more he looked at\n",
-            "> 80: them and bringing out more color. They were definitely the most unusual pair of\n",
-            "> 95: There wasn't less to be given to one person if you wanted to give more to\n",
-            "> 118: that she barely listened to the answers anymore. The answers were always the\n",
-            "> 119: same. Well, not exactly the same, but the same in a general sense. A more\n",
-            "> 202: down. It bothered her more than a little bit that this could also be used as a\n",
-            "> 204: much hope and energy. They had planned the trip for more than a year and both\n",
-            "> 209: more like a week in her mind. The fact that she still was having trouble\n",
-            "> 211: she could just get a little rest the entire incident might make a little more\n",
-            "> 255: suck them down. It bothered her more than a little bit that this could also be\n",
-            "> 294: herself in a little more than she bargained for. It wasn't often that she found\n",
-            "> 300: more to her life than this and there had to be a better way to make a living.\n",
-            "> 364: grateful for the distraction.  Debbie had taken George for granted for more than\n",
-            "> 384: events that do that to you.  Ten more steps. If he could take ten more steps it\n",
-            "> 386: they wouldn't listen to his brain. Ten more steps and it would be over but it\n",
-            "> 396: first time.  He had disappointed himself more than anyone else. That wasn't to\n",
-            "> 399: was something that made him even more disappointed in himself. Yet here he was,\n",
-            "> 413: sandcastle and take more of it away. The third wave, a big one, crashed over the\n",
-            "> 441: more intently to see if there were any tan lines where a ring may have been, and\n",
-            "> 481: show you that she can. Doubt her more and she'll prove she can again. We all\n",
-            "> 486: didnt know that sheets should be washed more than once a season. He said he\n",
-            "> 526: in a little more than she bargained for. It wasn't often that she found herself\n",
-            "> 551: George for granted for more than fifteen years now. He wasn't sure what exactly\n",
-            "> 589: was. That made her all the more relieved she had made the change. The number of\n",
-            "> 600: the beauty in his life at this moment would ultimately make his life much more\n",
-            "> 609: far more impressive than how he actually liked it. It was all about image and\n",
-            "> 612: green, but the more he looked at them he almost wanted to say they were a golden\n",
-            "> 615: constantly glinting off of them and bringing out more color. They were\n",
-            "> 621: wasn't that he was super strange or difficult. It was more that there wasn't\n",
-            "> 624: who knew him had. It was even more of a shame that they'd refuse to listen even\n",
-            "> 636: publically sing that first song.  He had disappointed himself more than anyone\n",
-            "> 639: were disappointed in him was something that made him even more disappointed in\n",
-            "> 647: I'm going to hire professional help tomorrow. I can't handle this anymore. She\n",
-            "> 649: more than I ever signed up to do.  There had to be a better way. That's all\n",
-            "> 653: boss. There had to be more to her life than this and there had to be a better\n",
-            "> 791: world for the rest of the day.  She reached her goal, exhausted. Even more\n",
-            "> 819: their pregnancy weight more quickly and easily. The benefits of breastfeeding\n",
-            "> 837: her more than a little bit that this could also be used as a metaphor for her\n",
-            "> 859: Hundreds of thousands? \"Not enough,\" the said under his breath. I need more.\n",
-            "> 862: the movement, trying to decipher exactly what she had spied. The more she\n",
-            "> 863: peered, however, the more she thought it might be a figment of her imagination.\n",
-            "> 897: smart. The fact that he was more intelligent than anyone else in the room could\n",
-            "> 910: and asking them to try and get their kids under a bit more control, but before\n"
+            "Communication took 0.0250847s\n"
           ]
         }
       ]
