Creato con Colaboratory

--- a/Grep_Challenge_10623060.ipynb
+++ b/Grep_Challenge_10623060.ipynb
@@ -51,9 +51,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b4367c78-9276-4465-eff7-2f2c3d8730c5"
+        "outputId": "1d1eb941-754f-44d1-8c4a-d0a4ceccbd4a"
       },
-      "execution_count": 1,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
@@ -1023,9 +1023,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "57a93a8b-829a-455a-9af3-65cc6280ca87"
+        "outputId": "e4554cc9-79a0-4b81-84b9-6d67f225011f"
       },
-      "execution_count": 2,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -1053,7 +1053,7 @@
         "#ifndef GREP_H\n",
         "#define GREP_H\n",
         "\n",
-        "#define LINELENGTH = 80\n",
+        "#define LINELENGTH 81\n",
         "\n",
         "#include <vector>\n",
         "#include <string>\n",
@@ -1065,11 +1065,15 @@
         "\n",
         "  typedef std::vector<number_and_line> lines_found;\n",
         "\n",
+        "  /* Auxiliary function to count the number of rows in total */\n",
+        "  void count_lines(unsigned &num_lines, const std::string &file_name);\n",
+        "\n",
         "  /* Only process with rank 0 should read from the file, \n",
         "   * other processes must get their lines from rank 0 \n",
         "   */\n",
         "  void get_lines(std::vector<std::string> &input_string, \n",
-        "                  const std::string &file_name);\n",
+        "                  const std::string &file_name,\n",
+        "                  unsigned num_lines);\n",
         "\n",
         "  /* Differently from the example seen at lecture, the first input to this\n",
         "   * function is a vector containing the portion of file that must be searched\n",
@@ -1091,9 +1095,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3bfe2208-6360-453e-acaf-0aa02835f458"
+        "outputId": "d0f778c2-64cb-4b90-a059-880bf9b280f8"
       },
-      "execution_count": 3,
+      "execution_count": 93,
       "outputs": [
         {
           "output_type": "stream",
@@ -1139,9 +1143,11 @@
         "  grep::lines_found local_filtered_lines;\n",
         "  unsigned local_lines_number;\n",
         "  std::vector<std::string> input_lines;\n",
+        "  unsigned num_lines;\n",
         "\n",
         "  initTime = MPI_Wtime();\n",
-        "  grep::get_lines(input_lines, argv[2]);\n",
+        "  grep::count_lines(num_lines, argv[2]);\n",
+        "  grep::get_lines(input_lines, argv[2], num_lines);\n",
         "  grep::search_string(input_lines, argv[1], local_filtered_lines, local_lines_number);\n",
         "  grep::print_result(local_filtered_lines, local_lines_number);\n",
         "\n",
@@ -1159,9 +1165,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d6cbed3a-c194-49f1-d80a-69eddcc75498"
+        "outputId": "8be7b974-f264-4a5e-a7e4-5758f413b7c9"
       },
-      "execution_count": 4,
+      "execution_count": 94,
       "outputs": [
         {
           "output_type": "stream",
@@ -1196,38 +1202,55 @@
         "\n",
         "#include \"grep.h\"\n",
         "\n",
+        "\n",
         "namespace grep{\n",
-        "  void get_lines(std::vector<std::string> &input_string, const std::string &file_name){\n",
+        "\n",
+        "  void count_lines(unsigned &num_lines, const std::string &file_name){\n",
+        "    int rank, size;     \n",
+        "    MPI_Comm_size(MPI_COMM_WORLD, &size);\n",
+        "    MPI_Comm_rank(MPI_COMM_WORLD, &rank);\n",
+        "    if (rank == 0){\n",
+        "      unsigned num_l = 0;\n",
+        "      \n",
+        "      /* open the main file and count the total number of rows */\n",
+        "      std::ifstream my_file (file_name);\n",
+        "\n",
+        "      for(std::string line; std::getline (my_file, line);){\n",
+        "        num_l++;\n",
+        "      }\n",
+        "      num_lines = num_l;\n",
+        "      std::cout << \"The number of lines in total is : \" << num_lines << std::endl;\n",
+        "    }\n",
+        "  }\n",
+        "  void get_lines(std::vector<std::string> &input_string, const std::string &file_name, unsigned num_lines){\n",
         "\n",
         "    /* get the rank and size of this communicator */\n",
         "    int rank, size;     // for storing this process' rank, and the number of processes\n",
         "    MPI_Comm_size(MPI_COMM_WORLD, &size);\n",
         "    MPI_Comm_rank(MPI_COMM_WORLD, &rank);\n",
         "\n",
-        "\n",
         "    int sendcounts[size];    // array describing how many rows to send to each process\n",
         "    int displs[size];        // array describing the displacements where each segment begins\n",
         "\n",
         "    /* where the process 0 stores ALL the file's rows */\n",
-        "    char rows[940][81];\n",
+        "    char rows[num_lines][LINELENGTH];\n",
         "    int my_num_rows;\n",
         "\n",
         "    /* only process 0 can read the whole file */\n",
         "    if (rank == 0){\n",
         "\n",
-        "      int num_lines = 0;\n",
+        "      int num_actual_line = 0;\n",
+        "      //std::vector<std::string> text_strings;\n",
         "      \n",
         "      /* open the main file and count the total number of rows */\n",
         "      std::ifstream my_file (file_name);\n",
         "\n",
         "      for(std::string line; std::getline (my_file, line);){\n",
         "\n",
-        "        std::strcpy(rows[num_lines], line.c_str());\n",
-        "        num_lines++;\n",
+        "        std::strcpy(rows[num_actual_line], line.c_str());\n",
+        "        num_actual_line++;\n",
         "      }\n",
         "\n",
-        "      std::cout << \"The number of lines in total is: \" << num_lines << std::endl;\n",
-        "      \n",
         "      int rem = num_lines % size; // rows remaining after division among processes\n",
         "      int sum = 0;                // Sum of counts. Used to calculate displacements\n",
         "      int aux_count = 0;\n",
@@ -1239,12 +1262,12 @@
         "              sendcounts[i]++;\n",
         "              rem--;\n",
         "          }\n",
-        "          sendcounts[i] *= 81; //multiply to 81 because each row is of 81 char\n",
+        "          sendcounts[i] *= LINELENGTH; //multiply to 81 because each row is of 81 char\n",
         "\n",
         "          displs[i] = sum;\n",
         "          sum += sendcounts[i];\n",
         "\n",
-        "          std::cout << \"The process \" << i << \" will reads \" << sendcounts[i]/81 << \" rows, that starts from index \" << displs[i]/81 << std::endl;\n",
+        "          std::cout << \"The process \" << i << \" will reads \" << sendcounts[i]/LINELENGTH << \" rows, that starts from index \" << displs[i]/81 << std::endl;\n",
         "          std::cout << \"That are \" << sendcounts[i] << \" char!\" << std::endl;\n",
         "\n",
         "          MPI_Send(&sendcounts[i], 1, MPI_INT, i, 0, MPI_COMM_WORLD);\n",
@@ -1255,11 +1278,11 @@
         "    MPI_Recv(&my_num_rows, 1, MPI_INT, 0, 0, MPI_COMM_WORLD, MPI_STATUS_IGNORE);\n",
         "    \n",
         "    /* initialize the 2D array where each process stores his rows */\n",
-        "    char my_rows[my_num_rows][81] = {};\n",
+        "    char my_rows[my_num_rows][LINELENGTH] = {};\n",
         "    \n",
         "    MPI_Barrier(MPI_COMM_WORLD); //syncronize \n",
         "    /* split the rows to the different processes based on the calulous done above (sendcounts and displs) */\n",
-        "    MPI_Scatterv(&rows, sendcounts, displs, MPI_CHAR, &my_rows, my_num_rows*81, MPI_CHAR, 0, MPI_COMM_WORLD);\n",
+        "    MPI_Scatterv(&rows, sendcounts, displs, MPI_CHAR, &my_rows, my_num_rows*LINELENGTH, MPI_CHAR, 0, MPI_COMM_WORLD);\n",
         "\n",
         "    /* store the data received in the output variable */\n",
         "    for (int s=0; s < my_num_rows; s++){\n",
@@ -1276,7 +1299,7 @@
         "    MPI_Comm_size(MPI_COMM_WORLD, &size);\n",
         "    MPI_Comm_rank(MPI_COMM_WORLD, &rank);\n",
         "\n",
-        "    unsigned num_rows = input_strings.size()/81; //number of rows (rank)process has\n",
+        "    unsigned num_rows = input_strings.size()/LINELENGTH; //number of rows (rank)process has\n",
         "\n",
         "    unsigned other_rows[size]; //array with the count of rows each process has\n",
         "    unsigned start_rows[size]; //array with the index of the row from which each process starts\n",
@@ -1365,16 +1388,16 @@
         "        }\n",
         "        else{\n",
         "          displs[i] = current_index;\n",
-        "          displs_char[i] = current_index * 81;\n",
+        "          displs_char[i] = current_index * LINELENGTH;\n",
         "          current_index += num_found[i];\n",
         "        }\n",
-        "        num_found_char[i] = num_found[i] * 81;\n",
+        "        num_found_char[i] = num_found[i] * LINELENGTH;\n",
         "      }\n",
         "      std::cout << \"Total number of lines found is \" << current_index << std::endl;\n",
         "    }\n",
         "\n",
         "    unsigned indexes[num];  //where stored the number of the lines found\n",
-        "    char l [num][81] = {};  //where I actually store the line found\n",
+        "    char l [num][LINELENGTH] = {};  //where I actually store the line found\n",
         "\n",
         "    for(int i = 0; i < num; i++){\n",
         "      indexes[i] = lines[i].first;\n",
@@ -1383,13 +1406,13 @@
         "\n",
         "    /* where process 0 collects all the results (number and rows) */\n",
         "    unsigned all_indexes[current_index];\n",
-        "    char all_l [current_index][81] = {};\n",
+        "    char all_l [current_index][LINELENGTH] = {};\n",
         "\n",
         "    MPI_Barrier(MPI_COMM_WORLD);\n",
         "\n",
         "    /* Gather to collect all results sparse along processes */\n",
         "    MPI_Gatherv(&indexes, num, MPI_UNSIGNED, &all_indexes, num_found, displs, MPI_UNSIGNED, 0, MPI_COMM_WORLD);\n",
-        "    MPI_Gatherv(&l, num * 81, MPI_CHAR, &all_l, num_found_char, displs_char, MPI_CHAR, 0, MPI_COMM_WORLD);\n",
+        "    MPI_Gatherv(&l, num * LINELENGTH, MPI_CHAR, &all_l, num_found_char, displs_char, MPI_CHAR, 0, MPI_COMM_WORLD);\n",
         "\n",
         "    /* print out the result */\n",
         "    std::ofstream out_file; \n",
@@ -1409,9 +1432,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DabWL2E0Nt8q",
-        "outputId": "8b70a234-ca79-4b9b-df31-f12b83602ba7"
+        "outputId": "cece54e2-20ea-4795-fb26-be901186bd54"
       },
-      "execution_count": 5,
+      "execution_count": 99,
       "outputs": [
         {
           "output_type": "stream",
@@ -1433,9 +1456,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lOEr2Cz0ydsW",
-        "outputId": "ec81dba5-5253-4050-cf38-ec2c9feac9db"
+        "outputId": "9de2670d-cd35-4722-9c2f-81e5c9c69b89"
       },
-      "execution_count": 6,
+      "execution_count": 100,
       "outputs": [
         {
           "output_type": "stream",
@@ -1457,23 +1480,23 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ddp3MCmr0uOd",
-        "outputId": "3b9bd0fd-f425-4b35-8ac0-b8d680962bcd"
+        "outputId": "bbccc2a8-9e9a-46fb-e44f-dd2bc2bde823"
       },
-      "execution_count": 46,
+      "execution_count": 101,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "/home/mpi\n",
-            "The number of lines in total is: 938\n",
+            "The number of lines in total is : 938\n",
             "The process 0 will reads 938 rows, that starts from index 0\n",
             "That are 75978 char!\n",
             "Process 0 starts with row 0\n",
             "Process 0 found 1\n",
             "Total number of lines found is 1\n",
             "7:Larry took the longer one. We slowly snuck up behind the seal until we were\n",
-            "Communication took 0.0108781s\n"
+            "Communication took 0.0163737s\n"
           ]
         }
       ]
@@ -1489,27 +1512,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QI0AJFHUICJE",
-        "outputId": "0acfaf95-4e89-4730-d8eb-78410befc647"
+        "outputId": "b2ad6576-506e-4902-c620-ea453dfce801"
       },
-      "execution_count": 18,
+      "execution_count": 102,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "/home/mpi\n",
-            "The number of lines in total is: 938\n",
+            "The number of lines in total is : 938\n",
             "The process 0 will reads 469 rows, that starts from index 0\n",
             "That are 37989 char!\n",
             "The process 1 will reads 469 rows, that starts from index 469\n",
             "That are 37989 char!\n",
             "Process 0 starts with row 0\n",
-            "Process 0 found 1\n",
             "Process 1 starts with row 469\n",
+            "Process 0 found 1\n",
             "Process 1 found 0\n",
             "Total number of lines found is 1\n",
             "7:Larry took the longer one. We slowly snuck up behind the seal until we were\n",
-            "Communication took 0.00823778s\n"
+            "Communication took 0.0183389s\n"
           ]
         }
       ]
@@ -1527,7 +1550,7 @@
         "id": "ttHZQDqWIEgl",
         "outputId": "77791738-9c9e-4b1c-8b37-8501b9cfb094"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1567,7 +1590,7 @@
         "id": "YIz1_GNEIG9Q",
         "outputId": "57f41052-2045-4bcb-8293-2546215a64bc"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1611,7 +1634,7 @@
         "id": "UdJI1VITIKN7",
         "outputId": "5760bc91-d282-4048-8288-3f2bf47d6db7"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1841,7 +1864,7 @@
         },
         "outputId": "a4163d54-32f0-4764-b0ae-360f938ee4b6"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
