Creato con Colaboratory

--- a/Grep_Challenge_10623060.ipynb
+++ b/Grep_Challenge_10623060.ipynb
@@ -4241,9 +4241,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DabWL2E0Nt8q",
-        "outputId": "61a151cc-deef-47ff-a467-d63d44df7606"
+        "outputId": "a776c86c-2fd0-4a3a-a793-a7d3913abdce"
       },
-      "execution_count": 79,
+      "execution_count": 83,
       "outputs": [
         {
           "output_type": "stream",
@@ -4265,9 +4265,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lOEr2Cz0ydsW",
-        "outputId": "1d612dba-cdb1-4d4a-86ea-554ce7ac4a34"
+        "outputId": "b3f468ac-a998-48d1-ff85-aa051bb98887"
       },
-      "execution_count": 82,
+      "execution_count": 84,
       "outputs": [
         {
           "output_type": "stream",
@@ -4789,7 +4789,7 @@
         "\n",
         "!grep -n more /home/mpi/input_file.txt &> /home/mpi/correct_result.txt\n",
         "\n",
-        "!mpiexec --allow-run-as-root -np 3 ./grep more /home/mpi/input_file.txt\n",
+        "!mpiexec --allow-run-as-root -np 2 ./grep more /home/mpi/input_file.txt\n",
         "\n",
         "!diff /home/mpi/correct_result.txt /home/mpi/program_result.txt"
       ],
@@ -4798,20 +4798,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "517275be-fb3a-421a-932a-0e7f97785ae0"
+        "outputId": "2f6fb0d7-6f69-418b-d5b9-e5098d9b8993"
       },
-      "execution_count": 78,
+      "execution_count": 86,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "/home/mpi\n",
-            "Search took 0.000203097s for process 1\n",
-            "Search took 0.000193303s for process 0\n",
-            "Search took 0.000198851s for process 2\n",
-            "Communication took 0.00317327s\n",
-            "Binary files /home/mpi/correct_result.txt and /home/mpi/program_result.txt differ\n"
+            "Search took 0.000307626s for process 1\n",
+            "Search took 0.000336401s for process 0\n",
+            "Communication took 0.00240069s\n"
           ]
         }
       ]
